# pyjson2dataclass

./: README.md  __init__.py  __main__.py  example.py  example1.py  pyproject.toml  setup.py  t.py  test.py  test_dataclass.py  utils.py  utils.py.bak
dataclass/: example.py  example1.py
json/: 2.json  example.json  example1.json
pyjson2dataclass-1.4.1.dist-info/: RECORD
pyjson2dataclass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  __main__.py  field.py  json2dataclass_test.py  tree.py  utils.py
tests/: field.py
